pen card align fixed when dob panel is not available

--- a/styles/fd-backed-cc.css
+++ b/styles/fd-backed-cc.css
@@ -1147,6 +1147,7 @@ body.fd-backed-cc {
 
                             .field-identifierpanel {
                                 margin-top: 0 !important;
+                                align-items: flex-end;
 
                                 @media (320px <=width <=767px) {
                                     grid-column: span 12;
@@ -1205,7 +1206,7 @@ body.fd-backed-cc {
                                         &#pandobselection-1 {
                                             margin-left: 20px;
                                         }
-                                    }
+                                    }                                    
                                 }
 
                                 .field-pan {
@@ -1266,6 +1267,14 @@ body.fd-backed-cc {
                                         input {
                                             color: var(--color-interface-text-primary);
                                             background: url('../icons/date_picker_cal_icon_select.svg') no-repeat 98% center;
+                                        }
+                                    }
+                                }
+
+                                &:has(.field-pandobselection[data-visible="false"]){
+                                    .field-pan{
+                                        input[type="text"]{
+                                            margin-bottom: 12px;
                                         }
                                     }
                                 }
